# model-training

./: .gitignore  Makefile  README.md  bandit.yaml  dvc.yaml  ml_checkers.py  nan_examples.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg
.dvc/: .gitignore  config  remlaproject-460716-28f297e7bc97.json
.github/workflows/: release.yml  test-remote-dvc.yml  test.yml
data/raw/: a1_RestaurantReviews_HistoricDump.tsv.dvc
models/: .gitignore
models/bow/: .gitignore
src/: train.py
tests/: conftest.py  test_data_integrity.py  test_dataset.py  test_features.py  test_metamorphic.py  test_model_train.py  test_monitor.py  test_monitoring.py  test_mutamorphic.py  test_pipeline.py  test_plots.py  test_preprocess.py  test_split.py  test_transform.py
training/: __init__.py  dataset.py  features.py  plots.py
training/modeling/: model_train.py  predict.py  preprocess.py  split.py  train.py  transform.py
