[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "training"
version = "0.0.1"
description = "No"
authors = [
  { name = "remla25-team2" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "setuptools~=80.1.0",
    "setuptools_scm~=8.3.1",
    "dvc~=3.59.2",
    "dvc_gdrive~=3.0.1",
    "black",
    "flake8",
    "isort",
    "pylint",
    "bandit",
    "loguru",
    "pip",
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "tqdm",
    "typer",
    "scikit-learn~=1.6.1",
    "joblib~=1.4.2",
    "pandas~=2.2.3",
    "numpy~=2.2.5",
    "lib-ml @ git+https://github.com/remla25-team2/lib-ml.git#egg=lib-ml",
    "ml_checkers",
]
requires-python = ">=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["training"]
force_sort_within_sections = true


