[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "training"
version = "0.0.1"
description = "No"
authors = [
  { name = "remla25-team2" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "setuptools~=80.1.0",
    "setuptools_scm~=8.3.1",
    "dvc~=3.59.2",
    "dvc_gdrive~=3.0.1",
    "black~=25.1.0",
    "flake8~=7.2.0",
    "isort~=6.0.1",
    "pylint~=3.3.7",
    "bandit~=1.8.3",
    "loguru~=0.7.3",
    "pip~=25.1.1",
    "pytest~=8.3.5",
    "pytest-cov~=6.2.1",
    "coverage~=7.9.0",
    "memory-profiler~=0.61.0",
    "python-dotenv~= 1.1.0",
    "tqdm~=4.67.1",
    "typer~=0.15.4",
    "scikit-learn~=1.6.1",
    "joblib~=1.4.2",
    "pandas~=2.2.3",
    "numpy~=2.2.5",
    "lib-ml @ git+https://github.com/remla25-team2/lib-ml.git#egg=lib-ml",
]
requires-python = ">=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["training"]
force_sort_within_sections = true


